lang/macro/tests/ui/fail/C-00-constructor-self-ref.stderr
error: ink! constructors must have no `self` receiver
  --> $DIR/C-00-constructor-self-ref.rs:10:33
   |
10 |         pub fn invalid_self_ref(&self) -> Self {
   |                                 ^^^^^
